--- a/estilos/style.css
+++ b/estilos/style.css
@@ -13,8 +13,7 @@ html, body {
 
 }
 body {
-    background: url(../imagens/fundo-madeira.jpg)
-    no-repeat top center;
+    background: url(../imagens/fundo-madeira.jpg) no-repeat top center;
     background-size: cover;
     background-attachment: fixed;
 }
@@ -32,5 +31,13 @@ main {
 
     height: 627px;
     width: 311px;
-    background-image: url(../imagens/frame-iphone.png);
+    background: url(../imagens/frame-iphone.png) no-repeat;
+}
+
+iframe#tela {
+    position: relative;
+    top: 80px;
+    left: 22px;
+    height: 471px;
+    width: 269px;
 }
