--- a/estilos/style.css
+++ b/estilos/style.css
@@ -9,7 +9,6 @@
 html, body {
     height: 100vh;
     width: 100vw;
-    background-color: black;
 
 }
 body {
@@ -40,4 +39,24 @@ iframe#tela {
     left: 22px;
     height: 471px;
     width: 269px;
+}
+
+#redes-sociais {
+    text-align: right;
+}
+
+#redes-sociais img {
+    width: 50px;
+    margin: 7px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+    box-sizing: border-box;
+
+}
+
+#redes-sociais img:hover {
+    border: 2px solid rgba(255, 255, 255, 0.567);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.7);
+    transform: translate(-3px, -3px);
+    transition: transform .3s, box-shadow .3s;
 }
